--- a/src/docs/asciidoc/Pet.adoc
+++ b/src/docs/asciidoc/Pet.adoc
@@ -15,4 +15,11 @@ endif::[]
 include::{snippets}/pet-create/success/auto-section.adoc[]
 
 == `R` 펫 페이징 조회
-include::{snippets}/pet-reterieve-list/success/auto-section.adoc[]
+include::{snippets}/pet-retrieve-list/success/auto-section.adoc[]
+
+== `R` 펫 메인 이미지 조회
+include::{snippets}/pet-retrieve-main-image/success/auto-section.adoc[]
+
+== `U` 펫 팔로우
+include::{snippets}/pet-follow/success/auto-section.adoc[]
+
