--- a/src/docs/asciidoc/pet.adoc
+++ b/src/docs/asciidoc/pet.adoc
@@ -23,11 +23,14 @@ include::{snippets}/pet-update/success/auto-section.adoc[]
 == `U` 펫 메인 이미지 업로드(수정)
 include::{snippets}/pet-update-main-image/success/auto-section.adoc[]
 
-== `R` 펫 정보 등록
+== `R` 펫 페이징 조회
 include::{snippets}/pet-retrieve-list/success/auto-section.adoc[]
 
 == `R` 펫 메인 이미지 조회
 include::{snippets}/pet-retrieve-main-image/success/auto-section.adoc[]
+
+== `R` 내가 팔로우 중인 펫 조회
+include::{snippets}/pet-retrieve-following/success/auto-section.adoc[]
 
 == `U` 펫 팔로우
 include::{snippets}/pet-follow/success/auto-section.adoc[]
